--- a/res/layout/menu_left_layout.xml
+++ b/res/layout/menu_left_layout.xml
@@ -1,47 +1,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-      android:id="@+id/relative1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"     	
-    	android:background="#ccc">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"     	
+   	android:background="#ccc">
     	
-     <cn.edu.njnu.android.View.SearchText
-         android:id="@+id/filter_edit"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:background="@drawable/search_bar_edit_selector"
-         android:drawableLeft="@drawable/search_bar_icon_normal"
-         android:hint="请输入关键字"
-         android:inputType="text"
-         android:singleLine="true"
-         android:textSize="15.0dip" />
-     
-	<FrameLayout
+     <cn.edu.njnu.android.recite.View.SearchTextView
+        android:id="@+id/menu_left_stv"
+        android:inputType="text"
+        android:layout_marginTop="5dp"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" 
-        android:layout_below="@id/filter_edit">
-       
-	       <TextView
-            android:id="@+id/dialog"
-            android:layout_width="80.0dip"
-            android:layout_height="80.0dip"
-            android:layout_gravity="center"
-            android:background="@drawable/show_head_toast_bg"
-            android:gravity="center"
-            android:textColor="#ffffffff"
-            android:textSize="30.0dip"
-            android:visibility="invisible" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_bar_edit_selector"
+        android:drawableLeft="@drawable/search_bar_icon_normal"
+        android:hint="请输入关键字"
+        android:singleLine="true"
+        android:textSize="15sp" />
+     
+     <FrameLayout
+        android:layout_below="@+id/menu_left_stv"
+        android:id="@+id/menu_left_fl"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-	       <ListView
-	           android:id="@+id/country_lvcountry"
-	           android:layout_width="fill_parent"
-	           android:layout_height="fill_parent"
-	           android:divider="@null" >
-	       </ListView>
+	    <ListView
+	        android:id="@+id/menu_left_lv"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:divider="@null" />
+	    
+	    <TextView
+        	android:id="@+id/menu_left_toast"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+           	android:background="@drawable/show_head_toast_bg"
+           	android:gravity="center"
+            android:textColor="#ffffffff"
+            android:textSize="30sp"
+            android:visibility="invisible" />
+	    
+	    <cn.edu.njnu.android.recite.View.SelectAlphaView 
+			android:id="@+id/menu_left_sav"
+	   		android:layout_width="30dp"
+	   		android:layout_height="match_parent"
+       		android:layout_gravity="end"
+       		android:background="#000000"/>
+	    
 	    
     </FrameLayout>
-
-
+	
+	
+	
 
 
 </RelativeLayout>
