--- a/res/layout/menu_left_layout.xml
+++ b/res/layout/menu_left_layout.xml
@@ -43,8 +43,7 @@
 			android:id="@+id/menu_left_sav"
 	   		android:layout_width="30dp"
 	   		android:layout_height="match_parent"
-       		android:layout_gravity="end"
-       		android:background="#000000"/>
+       		android:layout_gravity="end"/>
 	    
 	    
     </FrameLayout>
