--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,17 +22,25 @@
      	   
     		<TextView
             	android:id="@+id/ac_main_context"
-            	android:layout_width="match_parent"
+            	android:layout_width="fill_parent"
             	android:layout_height="wrap_content"
-            	android:layout_margin="30dp"
-            	android:scrollbars="vertical"/>  
+            	android:layout_marginTop="30dp"
+            	android:layout_marginStart="30dp"
+            	android:layout_marginEnd="30dp"
+            	android:textSize="50px"
+            	android:scrollbars="vertical"           
+            	android:gravity="center"/>  
             	
     		<TextView
     		    android:id="@+id/ac_main_result"
     		    android:layout_width="match_parent"
             	android:layout_height="wrap_content"
 				android:scrollbars="vertical"
-				android:textAlignment="center"/>
+				android:layout_marginTop="20dp"
+				android:layout_marginBottom="20dp"
+            	android:layout_marginStart="30dp"
+            	android:layout_marginEnd="30dp"
+				android:gravity="center"/>
             	
     		<Button 
     		    android:id="@+id/ac_main_start"
@@ -48,8 +56,7 @@
             	android:layout_gravity="center"
             	android:text="停止评测"/>
     		
-    		
-    		
+     		
 		</LinearLayout> 
 			
      		<TextView 
